<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WestAlgo Supernight</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="set_as">Set as</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="try_to_set_local_album_available_offline">
        This item is stored locally and available offline.</string>
    <string name="please_wait">Please wait</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="capturing">Capturing</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_index_back" translatable="false">0</string>
    <string name="pref_camera_id_index_front" translatable="false">1</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_id_entry_back_value" translatable="false">0</string>
    <string name="pref_camera_id_entry_front_value" translatable="false">1</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_location_label">LOCATION</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default" translatable="false">0</string>
    <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_off_value" translatable="false">off</string>
    <string name="setting_on_value" translatable="false">on</string>
    <string name="setting_none_value" translatable="false">none</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_large" translatable="false">large</string>
    <string name="pref_video_quality_medium" translatable="false">medium</string>
    <string name="pref_video_quality_small" translatable="false">small</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_large">Large</string>
    <string name="pref_camera_picturesize_entry_medium">Medium</string>
    <string name="pref_camera_picturesize_entry_small">Small</string>
    <string name="pref_camera_picturesize_default" translatable="false">large</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_label_auto">AUTO</string>
    <string name="pref_camera_focusmode_label_infinity">INFINITY</string>
    <string name="pref_camera_focusmode_label_macro">MACRO</string>
    <string name="pref_camera_focusmode_default" translatable="false">continuous-picture</string>
    <string name="pref_camera_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_hdr_plus_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_label">FLASH MODE</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_flashmode_label_auto">FLASH AUTO</string>
    <string name="pref_camera_flashmode_label_on">FLASH ON</string>
    <string name="pref_camera_flashmode_label_off">FLASH OFF</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_label">WHITE BALANCE</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_whitebalance_label_auto">AUTO</string>
    <string name="pref_camera_whitebalance_label_incandescent">INCANDESCENT</string>
    <string name="pref_camera_whitebalance_label_daylight">DAYLIGHT</string>
    <string name="pref_camera_whitebalance_label_fluorescent">FLUORESCENT</string>
    <string name="pref_camera_whitebalance_label_cloudy">CLOUDY</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_hdr_plus">HDR+</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_plus_on">HDR+ ON</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_plus_off">HDR+ OFF</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_on">HDR ON</string>
    <string name="pref_camera_scenemode_entry_turn_hdr_off">HDR OFF</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="pref_camera_scenemode_label_auto">NONE</string>
    <string name="pref_camera_scenemode_label_action">ACTION</string>
    <string name="pref_camera_scenemode_label_night">NIGHT</string>
    <string name="pref_camera_scenemode_label_sunset">SUNSET</string>
    <string name="pref_camera_scenemode_label_party">PARTY</string>
    <string name="pref_camera_countdown_label_off">TIMER OFF</string>
    <string name="pref_camera_countdown_label_one">1 SECOND</string>
    <string name="pref_camera_countdown_label_three">3 SECONDS</string>
    <string name="pref_camera_countdown_label_ten">10 SECONDS</string>
    <string name="pref_camera_countdown_label_fifteen">15 SECONDS</string>
    <string name="not_selectable_in_scene_mode">Not selectable in scene mode.</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default" translatable="false">0</string>
    <string name="pref_exposure_label">EXPOSURE</string>
    <string name="pref_camera_hdr_default">@string/setting_off_value</string>
    <string name="pref_camera_hdr_plus_default">@string/setting_off_value</string>
    <string name="pref_camera_hdr_label">HDR</string>
    <string name="pref_camera_id_label_back">FRONT CAMERA</string>
    <string name="pref_camera_id_label_front">BACK CAMERA</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="mode_settings">Settings</string>
    <string name="manual_exposure_compensation_desc">Manual Exposure Compensation</string>
    <string name="exposure_compensation_desc_n2">Exposure Compensation -2</string>
    <string name="exposure_compensation_desc_n1">Exposure Compensation -1</string>
    <string name="exposure_compensation_desc_0">Exposure Compensation 0</string>
    <string name="exposure_compensation_desc_p1">Exposure Compensation +1</string>
    <string name="exposure_compensation_desc_p2">Exposure Compensation +2</string>
    <string name="pref_category_resolution_quality">Resolution &amp; quality</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_camera_saf">SAF</string>
    <string name="pref_camera_af">AF Sync</string>
    <string name="pref_camera_ae">AE Sync</string>
    <string name="pref_camera_frame">Frame Sync</string>
    <string name="pref_camera_zsl">ZSL</string>
    <string name="pref_camera_ois">OIS</string>
    <string name="pref_camera_back">Back Camera Photo</string>
    <string name="pref_subcamera_image_format">SubImage Format</string>
    <string name="pref_camera_correction">DualCamera Correction</string>
    <string name="version_info">Version Info</string>
    <string name="version_info_summary">Show App and Algorithm version information.</string>
    <string name="pref_camera_correction_title">Choose Calibration Mode</string>
    <string name="pref_camera_correction_0">Correction &amp; Calibration (0)</string>
</resources>