<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<com.westalgo.factorycamera.ui.ModeOptions xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:camera="http://schemas.android.com/apk/res/com.westalgo.factorycamera"
    android:id="@+id/mode_options"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mode_options_height"
    android:layout_gravity="bottom"
    android:background="#00000000"
    android:visibility="invisible" >

    <com.westalgo.factorycamera.ui.RadioOptions
        android:id="@+id/mode_options_exposure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        camera:selected_drawable="@drawable/button_background_selected_photo" >

        <ImageButton
            android:id="@+id/exposure_n2"
            style="@style/ModeOption"
            android:background="@null"
            android:contentDescription="@string/exposure_compensation_desc_n2"
            android:src="@drawable/ic_exposure_n2"
            android:tag="-2" />

        <ImageButton
            android:id="@+id/exposure_n1"
            style="@style/ModeOption"
            android:background="@null"
            android:contentDescription="@string/exposure_compensation_desc_n1"
            android:src="@drawable/ic_exposure_n1"
            android:tag="-1" />

        <ImageButton
            android:id="@+id/exposure_0"
            style="@style/ModeOption"
            android:background="@null"
            android:contentDescription="@string/exposure_compensation_desc_0"
            android:src="@drawable/ic_exposure_0"
            android:tag="0" />

        <ImageButton
            android:id="@+id/exposure_p1"
            style="@style/ModeOption"
            android:background="@null"
            android:contentDescription="@string/exposure_compensation_desc_p1"
            android:src="@drawable/ic_exposure_p1"
            android:tag="1" />

        <ImageButton
            android:id="@+id/exposure_p2"
            style="@style/ModeOption"
            android:background="@null"
            android:contentDescription="@string/exposure_compensation_desc_p2"
            android:src="@drawable/ic_exposure_p2"
            android:tag="2" />
    </com.westalgo.factorycamera.ui.RadioOptions>

    <com.westalgo.factorycamera.ui.HorizontalListView
        android:id="@+id/iso_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible" >
    </com.westalgo.factorycamera.ui.HorizontalListView>

    <com.westalgo.factorycamera.ui.TopRightWeightedLayout
        android:id="@+id/mode_options_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.0"
        android:background="@null"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ImageButton
            android:id="@+id/exposure_button"
            style="@style/ModeOption"
            android:contentDescription="@string/manual_exposure_compensation_desc"
            android:src="@drawable/ic_exposure" />

        <com.westalgo.factorycamera.ui.MultiToggleImageButton
            android:id="@+id/flash_toggle_button"
            style="@style/ModeOption"
            camera:contentDescriptionIds="@array/camera_flash_descriptions"
            camera:imageIds="@array/camera_flashmode_icons" />

        <ImageButton
            android:id="@+id/iso_button"
            style="@style/ModeOption"
            android:contentDescription="@string/manual_exposure_compensation_desc"
            android:src="@drawable/ic_iso" />

        <com.westalgo.factorycamera.ui.MultiToggleImageButton
            android:id="@+id/camera_toggle_button"
            style="@style/ModeOption"
            camera:contentDescriptionIds="@array/camera_id_descriptions"
            camera:imageIds="@array/camera_id_icons" />
    </com.westalgo.factorycamera.ui.TopRightWeightedLayout>

</com.westalgo.factorycamera.ui.ModeOptions>